# META

./: Blog.md  DEVELOPER_GUIDE.md  HUGGINGFACE_BLOG_DRAFT.md  README.md  e9648dd-feat-Comprehensive-updates.patch  triage_kaggle_multidata_training.ipynb
triage-backend/: .env.example  .gitignore  README.md  TRIAGE_STATE_AND_BENCHMARKS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_benchmark.sh  triage-key.pem
triage-backend/config/: agents.yaml
triage-backend/data/: training_live.json
triage-backend/notebooks/: Gemma4_8B_Colab_FreeTier.ipynb  TRIAGE_GRPO_Training.ipynb  TRIAGE_Training_Colab.ipynb  fix_notebook.py  fix_notebook_2.py  gemma4_8b_colab_free_tier.py  generate_graphs.py  kaggle_benchmark.ipynb  kaggle_benchmark.py  kaggle_grpo_full.ipynb  kaggle_grpo_full.py  kaggle_grpo_training.py  make_kaggle_full.py  regen_nb.py  triage_grpo_kaggle.ipynb  triage_grpo_kaggle_full.ipynb
triage-backend/results/: FINAL_REPORT.md  bench_50step.json  bench_full_30step.json  bench_grpo_merged.json  benchmark_report.json
triage-backend/scripts/: Theme #1 - Multi-Agent Interactions  _quick_ollama.py  _test_chat.py  _test_lora_inference.py  _test_ollama.py  _test_triage_prompt.py  agent_benchmark.py  benchmark.py  benchmark_agent.py  build_combined_dataset.py  build_grpo_dataset.py  check_all_kernels.py  check_training_status.py  colab_train_dpo.py  demo_comparison.py  deploy_space.py  download_kaggle_logs.py  download_models.py  generate_dpo_dataset_ollama.py  generate_hf_dpo.py  generate_notebook.py  hf_requirements.txt  launch_hf_job.py  launch_training.py  launch_training_v2.py  list_kaggle_kernels.py  merge_adapters.py  merge_all_adapters.py  merge_and_push_hf.py  merge_grpo_lora.py  merge_lora_adapters.py  prepare_hf_dataset.py  prepare_hf_dataset_v2.py  push_dataset_to_hub.py  push_model.py  push_space.py  push_to_hf.py  push_v2_update.py  run_live_benchmark.sh  run_qwen3_14b_grpo_aws.sh  (+7 more)
triage-backend/spaces/: Dockerfile  README.md  app.py  requirements.txt
triage-backend/tests/: test_core.py  test_grpo.py  test_reward.py
(+86 files in other folders)
